# particle-bazel

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  README.md  mbedtls_config.h  pigweed_entry.cc
backends/: BUILD.bazel
backends/chrono/: BUILD.bazel
backends/gpio/: BUILD.bazel  particle_digital_io.cc
backends/gpio/public/pb_digital_io/: digital_io.h
backends/log/: BUILD.bazel  log_bridge.cc
backends/sync/: BUILD.bazel
backends/sys_io/: BUILD.bazel
backends/thread/: BUILD.bazel
backends/watchdog/: BUILD.bazel  watchdog.cc
particle/: BUILD.bazel
particle/rules/: particle_firmware.bzl
pb_cloud/: BUILD.bazel  cbor.cc  cbor_test.cc  docs.rst  integration_test.cc  ledger_integration_test.cc  particle_cloud_backend.cc  particle_ledger_backend.cc  pb_cloud_test.cc  pb_ledger_test.cc
pb_cloud/mock/: mock_cloud_backend.h  mock_ledger_backend.h
pb_cloud/public/pb_cloud/: cbor.h  cloud.h  cloud_backend.h  ledger_backend.h  ledger_editor.h  ledger_handle.h  ledger_typed_api.h  ledger_types.h  particle_cloud_backend.h  particle_ledger_backend.h  proto_serializer.h  serializer.h  typed_api.h  types.h
pb_crypto/: BUILD.bazel  docs.rst  pb_crypto_ascon.cc  pb_crypto_ascon_test.cc  pb_crypto_device_test.cc  pb_crypto_mbedtls.cc  pb_crypto_particle.cc
pb_crypto/public/pb_crypto/: pb_crypto.h
pb_integration_tests/: BUILD.bazel
pb_integration_tests/firmware/: BUILD.bazel  test_system.h  test_system_p2.cc
pb_integration_tests/harness/: BUILD.bazel  __init__.py  harness.py  rpc_client.py
pb_integration_tests/harness/fixtures/: __init__.py  base.py  p2_device.py
pb_integration_tests/rules/: BUILD.bazel  integration_test.bzl
pb_log/: BUILD.bazel  docs.rst  log_bridge.cc
pb_log/public/pb_log/: log_bridge.h
pb_socket/: BUILD.bazel  particle_tcp_socket.cc  tcp_client.cc
pb_socket/integration_test/: BUILD.bazel  particle_tcp_socket_test.options  particle_tcp_socket_test.proto  particle_tcp_socket_test.py  particle_tcp_socket_test_main.cc  tcp_echo_server.py
pb_socket/mock/: mock_tcp_socket.h  mock_tcp_stream.h
pb_socket/public/pb_socket/: particle_tcp_socket.h  tcp_client.h  tcp_socket.h  tcp_socket_stream_adapter.h  tcp_stream.h
pb_uart/: BUILD.bazel  async_uart.cc  docs.rst
pb_uart/public/pb_uart/: async_uart.h
pb_uart/test/: loopback_hardware_test.cc
pb_watchdog/: BUILD.bazel  docs.rst  watchdog.cc
pb_watchdog/public/pb_watchdog/: watchdog.h
pw_assert_particle/: BUILD.bazel  assert_backend.cc  docs.rst  handler.cc
pw_chrono_particle/: BUILD.bazel  docs.rst  system_clock.cc  system_timer.cc
pw_chrono_particle/public/pw_chrono_particle/: system_clock_config.h  system_timer_inline.h  system_timer_native.h
pw_chrono_particle/public_overrides/pw_chrono_backend/: system_clock_config.h  system_timer_inline.h  system_timer_native.h
pw_digital_io_particle/: BUILD.bazel  digital_io.cc  docs.rst
pw_digital_io_particle/public/pb_digital_io/: digital_io.h
pw_spi_particle/: BUILD.bazel  docs.rst  initiator.cc
pw_spi_particle/public/pb_spi/: initiator.h
pw_spi_particle/test/: loopback_test.cc
pw_stream_particle/: BUILD.bazel  docs.rst  uart_stream.cc
pw_stream_particle/public/pb_stream/: uart_stream.h
pw_stream_particle/test/: loopback_test.cc
pw_sync_particle/: BUILD.bazel  binary_semaphore.cc  binary_semaphore_facade_test_stubs.cc  counting_semaphore.cc  counting_semaphore_facade_test_stubs.cc  docs.rst  interrupt_spin_lock.cc  interrupt_spin_lock_facade_test_stubs.cc  mutex_facade_test_stubs.cc  thread_notification.cc  timed_mutex.cc  timed_mutex_facade_test_stubs.cc  timed_thread_notification.cc
pw_sync_particle/public/pw_sync_particle/: binary_semaphore_inline.h  binary_semaphore_native.h  counting_semaphore_inline.h  counting_semaphore_native.h  interrupt_spin_lock_inline.h  interrupt_spin_lock_native.h  mutex_inline.h  mutex_native.h  thread_notification_inline.h  thread_notification_native.h  timed_mutex_inline.h  timed_thread_notification_inline.h
pw_sync_particle/public_overrides/pw_sync_backend/: binary_semaphore_inline.h  binary_semaphore_native.h  counting_semaphore_inline.h  counting_semaphore_native.h  interrupt_spin_lock_inline.h  interrupt_spin_lock_native.h  mutex_inline.h  mutex_native.h  thread_notification_inline.h  thread_notification_native.h  timed_mutex_inline.h  timed_thread_notification_inline.h
pw_sys_io_particle/: BUILD.bazel  docs.rst  sys_io.cc
pw_system_particle/: BUILD.bazel  docs.rst  threads.cc
pw_thread_particle/: BUILD.bazel  docs.rst  sleep.cc  thread.cc  thread_iteration.cc
pw_thread_particle/id_public_overrides/pw_thread_backend/: id_inline.h  id_native.h
pw_thread_particle/public/pw_thread_particle/: config.h  context.h  id_inline.h  id_native.h  options.h  sleep_inline.h  test_thread_context_native.h  thread_inline.h  thread_native.h  yield_inline.h
pw_thread_particle/sleep_public_overrides/pw_thread_backend/: sleep_inline.h
pw_thread_particle/test_thread_context_public_overrides/pw_thread_backend/: test_thread_context_native.h
pw_thread_particle/thread_creation_public_overrides/pw_thread_backend/: context.h  options.h  priority.h  stack.h
pw_thread_particle/thread_public_overrides/pw_thread_backend/: thread_inline.h  thread_native.h
pw_thread_particle/yield_public_overrides/pw_thread_backend/: yield_inline.h
pw_unit_test_particle/: BUILD.bazel  docs.rst  main.cc
rules/: BUILD.bazel  flash.sh  flash_test.sh  memory_platform_user.ld  particle_firmware.bzl  particle_test.bzl  wait_for_device.sh
targets/p2_test/: BUILD.bazel  target_hooks.cc
toolchain/: BUILD.bazel  extensions.bzl
tools/: BUILD.bazel  README.md  extract_elf_sizes.py  package.json  pnpm-lock.yaml  requirements.txt  requirements_lock.txt
tools/cli/: __init__.py  wrapper.py
tools/cloud/: __init__.py  client.py  events.py  ledger.py
tools/scripts/: __init__.py  flash_firmware.py  serial_monitor.py  wait_for_device.py
tools/tests/: __init__.py  test_cli_wrapper.py  test_cloud_client.py
tools/usb/: __init__.py  device.py  flash.py  serial_port.py
(+2 files in other folders)
