# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# pb_socket - TCP socket abstraction for MACO Gateway communication
#
# Provides pw::stream::ReaderWriter interface over TCP sockets:
# - Particle P2: Uses Device OS socket HAL
# - Host: Mock implementation for testing

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# Abstract TCP stream interface
cc_library(
    name = "tcp_stream",
    hdrs = ["public/pb_socket/tcp_stream.h"],
    includes = ["public"],
    deps = [
        "@pigweed//pw_status",
        "@pigweed//pw_stream",
    ],
)

# Particle TCP client implementation
cc_library(
    name = "tcp_client",
    srcs = ["tcp_client.cc"],
    hdrs = ["public/pb_socket/tcp_client.h"],
    includes = ["public"],
    deps = [
        ":tcp_stream",
        "//:device_os_headers",
        "@pigweed//pw_log",
        "@pigweed//pw_status",
        "@pigweed//pw_stream",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

# Mock TCP stream for testing
cc_library(
    name = "mock_tcp_stream",
    hdrs = ["mock/mock_tcp_stream.h"],
    includes = ["mock"],
    deps = [
        ":tcp_stream",
    ],
)
