# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# pw_assert handler for Particle firmware
# Provides a simple handler that triggers a breakpoint on assertion failure.

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# The handler that gets called on assertion failure
# Implements pw_assert_basic_HandleFailure by logging and resetting
cc_library(
    name = "handler",
    srcs = ["handler.cc"],
    deps = [
        "//:device_os_headers",
        "@pigweed//pw_assert_basic:handler.facade",
        "@pigweed//pw_log",
    ],
    alwayslink = True,
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)
