# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "digital_io",
    srcs = ["digital_io.cc"],
    hdrs = ["public/pb_digital_io/digital_io.h"],
    includes = ["public"],
    deps = [
        "//:device_os_headers",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_digital_io",
        "@pigweed//pw_result",
        "@pigweed//pw_status",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)
