# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("//rules:particle_test.bzl", "particle_cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "initiator",
    srcs = ["initiator.cc"],
    hdrs = ["public/pb_spi/initiator.h"],
    includes = ["public"],
    deps = [
        "//:device_os_headers",
        "@pigweed//pw_assert:check",
        "@pigweed//pw_bytes",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_log",
        "@pigweed//pw_spi:initiator",
        "@pigweed//pw_status",
        "@pigweed//pw_sync:binary_semaphore",
    ],
    target_compatible_with = ["@pigweed//pw_build/constraints/arm:cortex-m33"],
)

# On-device loopback test - requires MOSI->MISO wire connection on SPI1
# (D3 -> D2)
#
# Build:  bazel build --config=p2 //pw_spi_particle:loopback_test
# Flash:  bazel run --config=p2 //pw_spi_particle:loopback_test_flash
particle_cc_test(
    name = "loopback_test",
    srcs = ["test/loopback_test.cc"],
    deps = [
        ":initiator",
        "@pigweed//pw_bytes",
        "@pigweed//pw_log",
    ],
)
